maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:26: error: value nil is not a member of object List
    var next:List[Any] = List.nil
                              ^ShortestPathMaze:45: error: type mismatch;
 found   : List[Any]
 required: List[Int]
    return next
           ^ShortestPathMaze:47: error: value nil is not a member of object List
  var nextCase:List[Any]=List.nil
                              ^ShortestPathMaze:52: error: type mismatch;
 found   : Any
 required: Int
      setIndication(a,b,i)
                    ^ShortestPathMaze:52: error: type mismatch;
 found   : Any
 required: Int
      setIndication(a,b,i)
                      ^